--- a/public/index.html
+++ b/public/index.html
@@ -6,16 +6,19 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Somerville Dental Associates, your trusted dental care provider." />
-  <meta property="og:title" content="Somerville Dental" />
+  <meta name="description"
+    content="Somerville Dental Associates in Medford, MA, offers comfortable and traditional general & cosmetic dentistry. Call us at (781) 874-1630 or visit us at 3 Ashland Street, Medford, MA 02155." />
+  <meta property="og:title" content="Somerville Dental Associates | Best Dentist in Medford, MA" />
   <meta property="og:description"
-    content="Quality dental health is comfortable and traditional general and cosmetic dentistry." />
+    content="Quality dental health is comfortable and traditional general and cosmetic dentistry at Somerville Dental Associates in Medford, MA." />
   <meta property="og:image" content="%PUBLIC_URL%/Icon.png" />
   <meta property="og:url" content="https://somerville-dental.netlify.app" />
   <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:description"
+    content="Quality dental health is comfortable and traditional general and cosmetic dentistry at Somerville Dental Associates in Medford, MA." />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/Icon.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>Somerville Dental</title>
+  <title>Somerville Dental Associates | Best Dentist in Medford, MA</title>
 </head>
 
 <body>
