revised meta data

--- a/public/index.html
+++ b/public/index.html
@@ -7,18 +7,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description"
-    content="Somerville Dental Associates in Medford, MA, offers comfortable and traditional general & cosmetic dentistry. Call us at (781) 874-1630 or visit us at 3 Ashland Street, Medford, MA 02155." />
+    content="Somerville Dental Associates in Medford, MA offers compassionate and comprehensive general and cosmetic dentistry. Visit us at 3 Ashland Street or call (781) 874-1630 to experience quality dental care tailored to your needs." />
   <meta property="og:title" content="Somerville Dental Associates | Best Dentist in Medford, MA" />
   <meta property="og:description"
-    content="Quality dental health is comfortable and traditional general and cosmetic dentistry at Somerville Dental Associates in Medford, MA." />
+    content="Discover patient-focused dental services at Somerville Dental Associates. We provide comprehensive general, cosmetic, and emergency dental care with an emphasis on comfort and lasting oral health." />
   <meta property="og:image" content="%PUBLIC_URL%/Icon.png" />
-  <meta property="og:url" content="https://somerville-dental.netlify.app" />
+  <meta property="og:url" content="" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:description"
-    content="Quality dental health is comfortable and traditional general and cosmetic dentistry at Somerville Dental Associates in Medford, MA." />
+    content="At Somerville Dental Associates, we offer a wide range of general and cosmetic dental treatments, prioritizing your comfort and long-term oral health." />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/Icon.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>Somerville Dental Associates | Best Dentist in Medford, MA</title>
+  <title>Somerville Dental Associates | Quality Dentistry in Medford, MA</title>
 </head>
 
 <body>
