revised meta data

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description"
     content="Somerville Dental Associates in Medford, MA offers compassionate and comprehensive general and cosmetic dentistry. Visit us at 3 Ashland Street or call (781) 874-1630 to experience quality dental care tailored to your needs." />
-  <meta property="og:title" content="Somerville Dental Associates | Best Dentist in Medford, MA" />
+  <meta property="og:title" content="Somerville Dental Associates | Quality Dentistry in Medford, MA" />
   <meta property="og:description"
     content="Discover patient-focused dental services at Somerville Dental Associates. We provide comprehensive general, cosmetic, and emergency dental care with an emphasis on comfort and lasting oral health." />
   <meta property="og:image" content="%PUBLIC_URL%/Icon.png" />
